ncc/testsuite/negative/bug-1047.n
module Bug1047 {
  class A {
    public x : int;
  }
  Run1 (_ : A) : int { 
    | d where d = 0 => 1 // E: expression ``d where d'' cannot be used as fieldname in
  }
  Run2 (_ : A) : int {
    | a where x = "" => 2  // E: expression ``a where x'' cannot be used as fieldname in
  }
}
 
